--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;400&display=swap');
+
+*{
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: "Outfit", sans-serif;
+}
+h2, h4, p, a{
+  text-decoration: none;
+  /* color: #fff; */
+  /* padding: 10px; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.btn{
+  background-color: rgb(234, 67, 6);
+  padding: 0.5rem 1rem;
+  font-weight: 600;
+  border: 2px white solid;
+  color: #fff;
+}
+
+.btn.dim-btn{
+   background-color: transparent;
+   border: 2px white solid;
 }
