--- a/src/componets/Heroimg2.css
+++ b/src/componets/Heroimg2.css
@@ -1,15 +1,16 @@
 .content-img {
     /* background: rgb(0, 0, 0, 0.5); */
     width: 100%;
-    height: 60vh;
+    height: 80vh;
 }
 
 .content-img::before {
     content: "";
-    background: url("https://images.unsplash.com/photo-1605379399642-870262d3d051?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjh8fHByb2dyYW1pbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60");
-     background-size: cover;
+    /* background: url("https://images.unsplash.com/photo-1605379399642-870262d3d051?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjh8fHByb2dyYW1pbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"); */
+    background: url("https://thumbs.dreamstime.com/z/apply-now-person-using-laptop-white-table-apply-now-person-using-laptop-128513022.jpg"); 
+    background-size: cover;
      background-position: center  top;
-     height: 60vh;
+     height: 80vh;
      width: 100%;
      position: absolute;
      top: 4.5rem;
