--- a/src/componets/NavberStyle.css
+++ b/src/componets/NavberStyle.css
@@ -5,8 +5,17 @@
     /* justify-content: space-around; */
     justify-content: space-between;
     padding: 1rem;
+    margin: 0 3rem;
     /* background-color: black; */
     /* position: relative; */
+}
+.header h1{
+    color: chartreuse;
+    font-weight: 700;
+}
+.header span{
+    color: red;
+    font-weight: 700;
 }
 .header-bg{
     background-color: rgb(0, 0,0,0.85);
