--- a/src/componets/HeroImg.css
+++ b/src/componets/HeroImg.css
@@ -1,31 +1,32 @@
 .mask{
     width: 100%;
-    height: 100vh;
-    position: relative;
+    height: 80vh;
+    /* position: relative; */
 }
 .into-img{
     width: 100%;
     height: 100%;
     background-position: center;
     background-size: cover;
-    object-fit: cover;
+    object-fit: cover;  
 }
 .mask::after {
     content: "";
     width: 100%;
     height: 100%;
-    position: absolute;
+    /* position: absolute; */
     top: 0;
     left: 0;
      background-color: #000;
      opacity: 0.6;
 }
 .hero{
-    position: relative;
+    /* position: relative; */
 }
 .content{
      position: absolute;
-    top: 50%; 
+    /* top: 50%;  */
+    bottom: 20%;
     left: 20%; 
     right: 20%;
     display: flex;
@@ -33,16 +34,7 @@
     align-items: center;
     /* justify-content: center; */
 }
-.content h4{
-    color: #fff;
-    margin: 10px 0;
-    font-size: 2rem;
-}
-.content h1{
-    color: #fff;
-    font-size: 5rem;
-    margin: 10px 0;
-}
+
 @media screen and (max-width:799px) {
     .hero.content{
        position: absolute;
