--- a/src/componets/NavberStyle.css
+++ b/src/componets/NavberStyle.css
@@ -1,34 +1,45 @@
 .header{
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0px;
     display: flex;
     align-items: center;
     /* justify-content: center; */
     /* justify-content: space-around; */
     justify-content: space-between;
-    padding: 1rem;
-    margin: 0 3rem;
+    /* padding: 1rem; */
+    /* margin: 0 3rem; */
+    background-color: rgb(246, 251, 251);
+    width: 100%;
+    height: 80px;
     /* background-color: black; */
     /* position: relative; */
+   
 }
 .header h1{
     color: chartreuse;
     font-weight: 700;
+    margin-left: 50px;
 }
 .header span{
     color: red;
     font-weight: 700;
 }
 .header-bg{
-    background-color: rgb(0, 0,0,0.85);
-    transition: 0.1s;
+    /* background-color: rgb(0, 0,0,0.85); */
+   
+    /* transition: 0.1s; */
 }
 .nav-menu{
     display: flex;
     list-style: none;
-  
+    margin-right:50px;
 }
 .nav-menu li{
   padding: 0 1rem;
+  
 }
+
 
 .hamburger{
     display: none;
