--- a/src/componets/footer.css
+++ b/src/componets/footer.css
@@ -1,6 +1,7 @@
 .footer-content{
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
+    justify-content: space-between;
 }
 .footer-content .left, 
 .right{
@@ -31,10 +32,13 @@ h4 span{
     padding: 2rem 0 0 0;
 }
 .social .icons{
+    
     margin-right: 20px;
 }
-.mid-footer{
-    padding: 5rem 0 0 0;
+.footer-content .mid-footer{
+    /* padding: 5rem 0 0 0; */
+    margin: 5px 5px;
+    
 }
 .sing-link{
     margin: 2rem 0;
